[package]
name = "ab-contract-example-flipper"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-contracts-io-type = { workspace = true }
ab-contracts-macros = { workspace = true }

[dev-dependencies]
ab-contracts-common = { workspace = true }
ab-contracts-executor = { workspace = true }
ab-system-contract-code = { workspace = true }

[features]
guest = [
    "ab-contracts-macros/guest",
]
