[package]
name = "ab-contract-example-wallet"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]
# Necessary for CLI options to work on benches
bench = false

[[bench]]
name = "flip"
harness = false

[dependencies]
ab-contracts-common = { workspace = true }
ab-contracts-io-type = { workspace = true }
ab-contracts-macros = { workspace = true }
ab-contracts-standards = { workspace = true }
ab-system-contract-simple-wallet-base = { workspace = true }
ab-system-contract-state = { workspace = true }

[dev-dependencies]
ab-contracts-executor = { workspace = true }
ab-system-contract-code = { workspace = true }
ab-system-contract-simple-wallet-base = { workspace = true, features = ["payload-builder"] }
criterion = { workspace = true }
schnorrkel = { workspace = true, features = ["getrandom"] }

[features]
guest = [
    "ab-contracts-common/guest",
    "ab-contracts-macros/guest",
    "ab-contracts-standards/guest",
]
