[package]
name = "ab-contract-example"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-contracts-io-type = { version = "0.0.1", path = "../ab-contracts-io-type" }
ab-contracts-macros = { version = "0.0.1", path = "../ab-contracts-macros" }
ab-contracts-standards = { version = "0.0.1", path = "../ab-contracts-standards" }
# TODO: Remove once https://github.com/dtolnay/linkme/issues/110 is resolved
linkme = "0.3.31"

[features]
guest = [
    "ab-contracts-standards/guest"
]
