[package]
name = "ab-contracts-common"
description = "Proc macros for contracts"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-io-type = { version = "0.0.1", path = "../ab-contracts-io-type" }
# TODO: Switch to blake3 once https://github.com/BLAKE3-team/BLAKE3/pull/439 is upstreamed and const hashing version is
#  exposed
const-sha1 = "0.3.0"
derive_more = { version = "1.0.0", default-features = false, features = ["add", "add_assign", "display", "from", "into", "mul", "mul_assign"] }
thiserror = "2.0.11"

[target.'cfg(any(unix, windows))'.dependencies]
linkme = "0.3.31"

[features]
guest = []
