[package]
name = "ab-contracts-executor"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-system-contract-address-allocator = { version = "0.0.1", path = "../ab-system-contract-address-allocator" }
ab-system-contract-code = { version = "0.0.1", path = "../ab-system-contract-code" }
ab-system-contract-state = { version = "0.0.1", path = "../ab-system-contract-state" }
inventory = "0.3.19"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
thiserror = "2.0.11"
tracing = "0.1.41"

[features]
