[package]
name = "ab-contracts-executor"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common", features = ["executor"] }
ab-system-contract-address-allocator = { version = "0.0.1", path = "../ab-system-contract-address-allocator" }
ab-system-contract-code = { version = "0.0.1", path = "../ab-system-contract-code" }
ab-system-contract-simple-wallet-base = { version = "0.0.1", path = "../ab-system-contract-simple-wallet-base" }
ab-system-contract-state = { version = "0.0.1", path = "../ab-system-contract-state" }
aliasable = "0.1.3"
halfbrown = { version = "0.3.0", features = ["arraybackend", "fxhash"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
smallvec = "1.14.0"
thiserror = "2.0.11"
tracing = "0.1.41"
