[package]
name = "ab-contracts-macros"
description = "Common code for contracts"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
ident_case = "1.0.1"
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.93", features = ["full"] }
