[package]
name = "ab-contracts-macros"
description = "Common code for contracts (implementation)"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-macros-impl = { version = "0.0.1", path = "../ab-contracts-macros-impl" }
