[package]
name = "ab-contracts-macros"
description = "Common code for contracts (implementation)"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-contracts-io-type = { version = "0.0.1", path = "../ab-contracts-io-type" }
ab-contracts-macros-impl = { version = "0.0.1", path = "../ab-contracts-macros-impl" }

[target.'cfg(any(unix, windows))'.dependencies]
const_format = "0.2.34"
inventory = "0.3.19"

[features]
guest = [
    "ab-contracts-common/guest"
]
