[package]
name = "ab-contracts-standards"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-contracts-macros = { version = "0.0.1", path = "../ab-contracts-macros" }

[features]
guest = [
    "ab-contracts-common/guest",
    "ab-contracts-macros/guest",
]
