[package]
name = "ab-system-contract-address-allocator"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-contracts-io-type = { version = "0.0.1", path = "../ab-contracts-io-type" }
ab-contracts-macros = { version = "0.0.1", path = "../ab-contracts-macros" }

[features]
guest = []
