[package]
name = "ab-system-contract-simple-wallet-base"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-contracts-common = { version = "0.0.1", path = "../ab-contracts-common" }
ab-contracts-io-type = { version = "0.0.1", path = "../ab-contracts-io-type" }
ab-contracts-macros = { version = "0.0.1", path = "../ab-contracts-macros" }
ab-contracts-standards = { version = "0.0.1", path = "../ab-contracts-standards" }
ab-system-contract-state = { version = "0.0.1", path = "../ab-system-contract-state" }
blake3 = { version = "1.6.0", default-features = false }
schnorrkel = { version = "0.11.4", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tinyvec = { version = "1.8.1", default-features = false }

[features]
guest = [
    "ab-contracts-common/guest",
    "ab-contracts-macros/guest",
    "ab-contracts-standards/guest",
]
# APIs that require `alloc` crate
alloc = []
# Enables payload builder API
payload-builder = [
    "alloc",
]
