[package]
name = "ab-executor-native"
description = ""
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-aligned-buffer = { workspace = true }
ab-contracts-common = { workspace = true, features = ["executor"] }
ab-contracts-io-type = { workspace = true }
ab-contracts-standards = { workspace = true }
ab-executor-slots = { workspace = true }
ab-system-contract-address-allocator = { workspace = true }
ab-system-contract-block = { workspace = true }
ab-system-contract-code = { workspace = true }
ab-system-contract-native-token = { workspace = true }
ab-system-contract-simple-wallet-base = { workspace = true }
ab-system-contract-state = { workspace = true }
ab-transaction = { workspace = true }
halfbrown = { workspace = true, features = ["arraybackend", "fxhash"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
