[package]
name = "ab-riscv-benchmarks"
description = "RISC-V benchmarks"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/build.rs",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]
# Necessary for CLI options to work on benches
bench = false

[[bench]]
name = "riscv"
harness = false

[dependencies]
ab-blake3 = { workspace = true }
ab-contracts-macros = { workspace = true }
ab-core-primitives = { workspace = true }
ab-io-type = { workspace = true }

[target.'cfg(not(target_env = "abundance"))'.dependencies]
ab-contract-file = { workspace = true }
ab-riscv-interpreter = { workspace = true }
ab-riscv-primitives = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
ab-contract-file = { workspace = true }
ab-contracts-tooling = { workspace = true }

[features]
guest = [
    "ab-contracts-macros/guest",
]

[lints]
workspace = true
