[package]
name = "ab-riscv-interpreter"
description = "RISC-V interpreter"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]
links = "ab-riscv-interpreter"

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-riscv-macros = { workspace = true, features = ["proc-macro"] }
ab-riscv-primitives = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
ab-riscv-macros = { workspace = true, features = ["build"] }

[lints]
workspace = true
