[package]
name = "ab-riscv-macros-common"
description = "Common utilities for RISC-V macros"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
