[package]
name = "ab-riscv-macros-common"
description = "Common utilities for RISC-V macros"
repository = "https://github.com/nazar-pc/abundance"
homepage = "https://github.com/nazar-pc/abundance/tree/main/crates/execution/ab-riscv-macros-common"
license = "0BSD"
version = "0.0.3"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
