[package]
name = "ab-riscv-macros-impl"
description = "Macros for RISC-V primitives and interpreter (implementation)"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
ab-riscv-macros-common = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lints]
workspace = true
