[package]
name = "ab-riscv-macros"
description = "Macros for RISC-V primitives and interpreter"
repository = "https://github.com/nazar-pc/abundance"
homepage = "https://github.com/nazar-pc/abundance/tree/main/crates/execution/ab-riscv-macros"
license = "0BSD"
version = "0.0.3"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-riscv-macros-impl = { workspace = true, optional = true }
ab-riscv-macros-common = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true, features = ["extra-traits", "full", "visit", "visit-mut"] }

[features]
default = [
    "build",
    "proc-macro",
]
# Enable features needed for usage in `build.rs`
build = [
    "dep:ab-riscv-macros-common",
    "dep:anyhow",
    "dep:prettyplease",
    "dep:quote",
    "dep:syn",
]
# Enable proc macro re-export
proc-macro = [
    "dep:ab-riscv-macros-impl",
]

[lints]
workspace = true
