[package]
name = "ab-riscv-primitives"
description = "RISC-V primitives"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/build.rs",
    "/Cargo.toml",
]
links = "ab-riscv-primitives"

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-riscv-macros = { workspace = true, features = ["proc-macro"] }

[build-dependencies]
ab-riscv-macros = { workspace = true, features = ["build"] }

[lints]
workspace = true
