[package]
name = "ab-riscv-primitives"
description = "Composable RISC-V primitives (instructions, registers) and abstractions around them"
keywords = ["risc-v", "decoder", "no-std"]
repository = "https://github.com/nazar-pc/abundance"
license = "0BSD"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/build.rs",
    "/Cargo.toml",
]
links = "ab-riscv-primitives"

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-riscv-macros = { workspace = true, features = ["proc-macro"] }

[build-dependencies]
ab-riscv-macros = { workspace = true, features = ["build"] }

[lints]
workspace = true
